[gd_scene load_steps=3 format=3 uid="uid://petition_panel_001"]

[ext_resource type="Script" path="res://Scripts/UI/PetitionPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_petition"]
bg_color = Color(0.12, 0.08, 0.06, 0.98)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.7, 0.6, 0.3, 1)

[node name="PetitionPanel" type="CanvasLayer"]
layer = 95
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_petition")

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
text = "ðŸ“œ ROYAL PETITION"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="PetitionerName" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
text = "From: [Petitioner Name]"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="PetitionText" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBox/PetitionText"]
layout_mode = 2
text = "Petition:"
theme_override_font_sizes/font_size = 16

[node name="Scroll" type="ScrollContainer" parent="Panel/VBox/PetitionText"]
layout_mode = 2
size_flags_vertical = 3

[node name="Text" type="RichTextLabel" parent="Panel/VBox/PetitionText/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[Petition text will appear here]"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="QuestDetails" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="DetailsLabel" type="Label" parent="Panel/VBox/QuestDetails"]
layout_mode = 2
text = "Quest Details:"
theme_override_font_sizes/font_size = 16

[node name="Type" type="Label" parent="Panel/VBox/QuestDetails"]
layout_mode = 2
text = "Type: BUILD"

[node name="Target" type="Label" parent="Panel/VBox/QuestDetails"]
layout_mode = 2
text = "Target: Windmill"

[node name="Location" type="Label" parent="Panel/VBox/QuestDetails"]
layout_mode = 2
text = "Location: East Sector"

[node name="Urgency" type="Label" parent="Panel/VBox/QuestDetails"]
layout_mode = 2
text = "Urgency: HIGH"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Consequences" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Rewards" type="RichTextLabel" parent="Panel/VBox/Consequences"]
custom_minimum_size = Vector2(350, 80)
layout_mode = 2
bbcode_enabled = true
text = "[color=green]If Accepted:[/color]
  +10 Influence"
fit_content = true

[node name="Penalties" type="RichTextLabel" parent="Panel/VBox/Consequences"]
custom_minimum_size = Vector2(350, 80)
layout_mode = 2
bbcode_enabled = true
text = "[color=red]If Rejected:[/color]
  +5 Mutiny Risk
  -20% Loyalty"
fit_content = true

[node name="HSeparator4" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="AcceptButton" type="Button" parent="Panel/VBox/Buttons"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "âœ“ ACCEPT"

[node name="RejectButton" type="Button" parent="Panel/VBox/Buttons"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "âœ— REJECT"

[node name="Instructions" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Enter: Accept | Esc: Reject"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/VBox/Buttons/AcceptButton" to="." method="_accept_petition"]
[connection signal="pressed" from="Panel/VBox/Buttons/RejectButton" to="." method="_reject_petition"]
